Fix tests, take credentials from environment variables